@startuml classDiagram
package "Shared Context" {
class "Money" {
-amount : BigDecimal
-currency : Currency
--
+add(other)
+multiply(multiplier)
}

class "Address" {
-street : String
-city : String
-postalCode : String
-country : String
}

class "CustomerId" {
-value : UUID
}
}

package "CRM Context" {
entity "Customer" {
-id : CustomerId
--
-name : String
-email : String
-address : Address
--
+updateContactInfo(email, address)
+getContactInfo(): String
}
}
package "Sales Context" {
entity "SalesOrder" {
-id : UUID
--
-customerId : CustomerId
-orderDate : LocalDateTime
-items : List<SalesOrderItem>
-totalAmount : Money
--
+addItem(productId, quantity, unitPrice)
+calculateTotalAmount()
}

entity "SalesOrderItem" {
-productId : ProductId
-quantity : int
-unitPrice : Money
--
+calculateItemAmount()
}

class "ProductId" {
-value : UUID
}
}
Customer --> "1" Address
Customer --> "1" CustomerId
SalesOrder --> "1" CustomerId
SalesOrder *--> "1..*" SalesOrderItem : manages
SalesOrderItem --> "1" Money
SalesOrderItem --> "1" ProductId
SalesOrder --> "1" Money
@enduml